2012-09-10  JMB  Maemo packaging fixes

    Added mce-dev to the list of build dependencies used by the Maemo
    autobuilders; needed for keeping the display on throughout a slideshow.
    Also updated the base64-encoded application icon data in the Maemo
    package control files.

2012-09-08  #################### PortaBase 2.1 ####################

2012-09-08  JMB  French translation update, updates for 2.1 release

    Added the latest translations of the help files into French, and updated
    the last few files in preparation for the 2.1 release.

2012-08-28  JMB  Row deletion bugfix, Mac icons and retina display support

    Fixed a bug where deleting a row from the row viewer would delete the
    row it was first launched for, not necessarily the one it was currently
    showing.  Also updated a few instaces of the application icon on the Mac
    that I missed when first swapping it.  Enabled high-resolution text
    rendering on retina displays (higher resolution icon display has to wait
    for support in Qt).

    Added the latest update to the French translation of the help files, and
    made some changes to ensure that the updated translations of Sphinx
    phrases are fully utilized in the help files.

2012-08-24  JMB  Translation updates, Mac code signing

    Incorporated the latest text updates from all the translators.  Added a
    work-in-progress simplified Chinese translation by Fiona Zhao.  Support
    for simplified Chinese and Slovak in the Windows installer.
    
    Added support for code signing in the Mac build script in order to be
    treated as a more legitimate application by Gatekeeper in Mountain Lion.

2012-08-20  JMB  N900 crash fix

    Hopefully a final fix for the N900 crash I was occasionally experiencing,
    by completely replacing the HTML display widget used for that platform.
    Working fine so far after a week of testing.

2012-08-12  JMB  New application icon
